# edger_bevy

./: Cargo.toml  README.md  justfile
crates/egui/: Cargo.toml
crates/egui/src/: font.rs  font_loader.rs  helper.rs  lib.rs  plugin.rs
crates/egui/src/easy_mark/: easy_mark_viewer.rs
crates/shape/: Cargo.toml
crates/shape/src/: lib.rs  path.rs  plugin.rs  rectangle.rs  shape.rs
crates/util/: Cargo.toml
crates/util/src/asset/: markdown_asset.rs
crates/util/src/misc/: entity.rs  text.rs
crates/view/: Cargo.toml
crates/view/src/: lib.rs  plugin.rs
crates/view/src/layout/: dock.rs  grid.rs  vbox.rs  view.rs
crates/view/src/shape/: mod.rs
crates/view/src/shape/dev/: theme.rs
crates/view/src/shape/view/: color_background.rs
src/: assets.rs  lib.rs
src/app/: events.rs  mod.rs  state.rs
src/view/: mod.rs  root_layout.rs
