[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/edger-dev/edger_bevy"
repository = "https://github.com/edger-dev/edger_bevy"

[workspace]
resolver = "2"
members = [
    "crates/view",
    "crates/shape",
    "crates/egui",
    "crates/util",
]

[workspace.dependencies]
edger_bevy_egui = { path = "crates/egui", version = "0.2.0" }
edger_bevy_view = { path = "crates/view", version = "0.1.0" }
edger_bevy_shape = { path = "crates/shape", version = "0.2.0" }
edger_bevy_util = { path = "crates/util", version = "0.1.0" }

# Bevy
bevy = { version = "0.13.0", default-features = false }
bevy_egui = { version = "0.25.0" }
bevy_prototype_lyon = "0.11.0"
anyhow = "1.0.80"
bevy_asset_loader = "0.20.0"

rand = "0.8.5"
snafu = "0.8.1"
lazy_static = "1.4"

# [target.'cfg(target_arch = "wasm32")'.workspace.dependencies]
wasm-bindgen = "0.2.91"
console_error_panic_hook = "0.1.7"
gloo-events = "0.2.0"
futures = "0.3.30"
web-sys = { version = "0.3.64", features = [
    "Element", "Document", "Window", "Location", "Url", "UrlSearchParams", "console", "TouchEvent",
    #https://rustwasm.github.io/docs/wasm-bindgen/examples/web-audio.html
    "AudioContext", "AudioDestinationNode", "AudioNode", "AudioParam", "GainNode", "OscillatorNode", "OscillatorType",
]}

# -----------------------------------------------------------------------------------

[package]
publish = true
name = "edger_bevy"
version = "0.2.0"
description = "edger.dev shared logic for bevy applications and libraries"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_asset",
    "bevy/bevy_text",
    "bevy/png",
]

native = [
    "bevy/x11",
    "bevy/wayland",
]

web = [
    "bevy/webgl2",
]

shape = [
    "edger_bevy_shape",
    "edger_bevy_view?/shape",
]

view = [
    "edger_bevy_view",
]

egui = [
    "edger_bevy_egui",
]

assets = [
    "bevy_asset_loader",
    "bevy_asset_loader/standard_dynamic_assets",
]


all = [
    "native",
    "view",
    "shape",
    "egui",
    "assets",
]

[dependencies]
edger_bevy_util = { workspace = true }
edger_bevy_shape = { workspace = true, optional = true }
edger_bevy_view = { workspace = true, optional = true }
edger_bevy_egui = { workspace = true, optional = true }

bevy = { workspace = true }
bevy_asset_loader = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
gloo-events = { workspace = true }
futures = { workspace = true }
web-sys = { workspace = true }
