[package]
publish = true
name = "edger_bevy_egui"
version = "0.2.0"
description = "edger.dev egui helpers"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_text",
]

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
lazy_static = { workspace = true }
anyhow = { workspace = true }
