[package]
publish = true
name = "edger_bevy_view"
version = "0.6.0"
description = "edger.dev view abstraction with common layout support"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/png",
]

shape = [
    "edger_bevy_shape",
    "rand",
]

[dependencies]
edger_bevy_util = { workspace = true }
edger_bevy_shape = { workspace = true, optional = true }

bevy = { workspace = true, default-features = false }
snafu = { workspace = true }

rand = { workspace = true, optional = true }